# dao-analyzer

./: .dockerignore  .envrc  .gitignore  ABOUT.md  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  api_manager.py  app.py  deploy.sh  docker-compose.yml  gunicorn_config.py  index.py  init.sh  logs.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docker.txt  setup.cfg  setup.py  tox.ini  updateAragonNames.py
.github/: dependabot.yml
.github/workflows/: check_continue.yml  ci.yml  docker.yml  update_aragon_names.yml
api/: api_manager.py  query.py  query_builder.py
apps/dashboard/: callbacks.py  controller.py  en_strings.py  layout.py  strings.py
apps/dashboard/business/: app_service.py  service_state.py  transfers.py
apps/dashboard/business/transfers/: metric_stacked_time_series.py  metric_time_series.py  n_stacked_serie.py  n_stacked_time_serie.py  organization.py  serie.py  stacked_serie.py  stacked_time_serie.py  time_series.py
apps/dashboard/daos/: dao.py
apps/dashboard/data_access/: dao_metric_time_series.py  dao_n_stacked_serie.py  dao_organization.py  dao_proposal_outcome_serie.py  dao_stacked_serie.py  dao_stacked_time_series.py
apps/dashboard/data_access/daos/: dao_metric_time_series.py  dao_new_user_metric.py  dao_organization.py
apps/dashboard/domain/: model_transfers.py  transfers.py
apps/dashboard/domain/daos/: dao_new_user_metric.py  dao_organization.py
apps/dashboard/presentation/: controller.py  layout.py  strings.py
assets/: stylesheet.css
cache_scripts/: CHANGELOG.md  README.md  api_requester.py  argparser.py  common.py  config.py  endpoints.json  main.py  metadata.py  parser.py
cache_scripts/aragon/: dao_names.json  main.py  runner.py
cache_scripts/aragon/collectors/: apps.py  cast.py  mini_me_token.py  organizations.py  repo.py  token_holders.py  transaction.py  vote.py
cache_scripts/common/: __init__.py  api_requester.py  blockscout.py  common.py  cryptocompare.py  graphql.py
cache_scripts/daohaus/: main.py  runner.py
cache_scripts/daohaus/collectors/: member_collector.py  moloch_collector.py  proposal_collector.py  rage_quit_collector.py  vote_collector.py
cache_scripts/daostack/: api_requester.py  dao_collector.py  main.py  metaHandler.py  runner.py
cache_scripts/daostack/collectors/: dao_collector.py  proposal_collector.py  rep_holder_collector.py  stake_collector.py  vote_collector.py
dao_analyzer/: __init__.py  app.py  cache.py  dac  matomo.py
dao_analyzer/apps/aragon/business/: app_service.py
dao_analyzer/apps/aragon/business/metric_adapter/: asset_tokens.py  asset_values.py  basic_adapter.py  cast_type.py  installed_apps.py  vote_outcome.py
dao_analyzer/apps/aragon/data_access/daos/: organization_dao.py  platform_dao.py
dao_analyzer/apps/aragon/resources/: strings.py
dao_analyzer/apps/common/api/graphql/: query_builder.py
dao_analyzer/apps/common/business/: i_metric_adapter.py
dao_analyzer/apps/common/business/transfers/: __init__.py  data_transfer_object.py  hierarchical_data.py  n_stacked_serie.py  organization.py  serie.py  stacked_serie.py  tabular_data.py
dao_analyzer/apps/common/data_access/: pandas_utils.py
dao_analyzer/apps/common/data_access/daos/: organization_dao.py  platform_dao.py
dao_analyzer/apps/common/data_access/requesters/: __init__.py  cache_requester.py  irequester.py  join_cache_requester.py
dao_analyzer/apps/common/presentation/: data_point_layout.py
dao_analyzer/apps/common/presentation/about_view/: about_view.py
dao_analyzer/apps/common/resources/: colors.py  strings.py
dao_analyzer/apps/daohaus/business/: app_service.py
dao_analyzer/apps/daohaus/resources/: strings.py
dao_analyzer/apps/daostack/business/: app_service.py
dao_analyzer/apps/daostack/resources/: strings.py
dao_analyzer/assets/: ABOUT.md  callbacks.js  stylesheet.css
dao_analyzer/web/: __init__.py  app.py  cache.py
dao_analyzer/web/assets/: ABOUT.md  stylesheet.css
dao_analyzer_components/: .eslintrc  .gitignore  MANIFEST.in  README.md  _validate_init.py  index.html  package-lock.json  package.json  requirements.txt  setup.py  webpack.config.js  webpack.demo.config.js
dao_analyzer_components/dao_analyzer_components/: __init__.py  dao_analyzer_components.css
dao_analyzer_components/public/: index.html
dao_analyzer_components/src/demo/: index.js
dao_analyzer_components/src/lib/: index.js
dao_analyzer_components/src/lib/components/: DAOInfo.jsx  DataPoint.jsx  ParticipationStat.jsx  PlatformInfo.jsx
scripts/: checkContinue.sh  datawarehouseDiff.py  deploy.sh  printArrow.py  updateAragonNames.py  uploadDataWarehouse.py
scripts/archive/: README.txt  names.ipynb  uploadToKaggle.sh
src/: __init__.py  app.py  logs.py
src/api/: api_manager.py  query_builder.py
src/api/graphql/: query_builder.py
src/api/graphql/daostack/: api_manager.py
src/apps/api/graphql/: query_builder.py
src/apps/aragon/business/: app_service.py
src/apps/aragon/resources/: strings.py
src/apps/common/business/: singleton.py
src/apps/common/data_access/: pandas_utils.py  update_date.py
src/apps/common/presentation/: dashboard_view.py
src/apps/common/resources/: colors.py  strings.py
src/apps/daohaus/business/: app_service.py
src/apps/daohaus/resources/: strings.py
src/apps/daostack/business/: app_service.py  service_state.py
src/apps/daostack/data_access/: dao_organization.py  dao_proposal_outcome_serie.py  dao_stacked_serie.py
src/apps/daostack/presentation/: controller.py  layout.py
src/apps/daostack/resources/: colors.py  strings.py
src/apps/dashboard/business/: app_service.py
src/apps/dashboard/data_access/: dao_organization.py  dao_proposal_outcome_serie.py  dao_stacked_serie.py
src/apps/dashboard/presentation/: controller.py  layout.py
src/apps/dashboard/resources/: strings.py
src/assets/: stylesheet.css
test/api/: test_api_manager.py  test_query_builder.py
test/mocks/: api_requester_mock.py  request_mock.py  unix_date_builder.py
test/unit/api/graphql/: test_query_builder.py
test/unit/components/: test_dao_info.py
(+409 files in other folders)
