[metadata]
name = dao-analyzer
# version from setuptools_scm (see setup.py)
author = David Davó
author_email = ddavo@ucm.es
description = "A tool to monitor DAO activity"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dao-analyzer.science
project_urls =
  Source = https://github.com/Grasia/dao-analyzer
  Bug Tracker = https://github.com/Grasia/dao-analyzer/issues
  Changelog = https://github.com/Grasia/dao-analyzer/blob/master/CHANGELOG.md
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Environment :: Web Environment
  Framework :: Dash
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering :: Visualization
  Topic :: Sociology
  Typing :: Typed
  Topic :: Utilities

[options]
package_dir =
  dao_analyzer = dao_analyzer
  cache_scripts = cache_scripts
packages = find:
python_requires = >= 3.8
install_requires =
  dash >= 2.0.0
  Werkzeug < 2.1.0 # Waiting for upstream fix on dash part
  flask >= 2.0.2
  gql >= 3.0.0a1
  millify >= 0.1.1
  numpy >= 1.17.3
  pandas >= 1.3.4
  portalocker >= 2.3.2
  pyarrow >= 6.0.0
  requests >= 2.26.0
  requests-cache >= 0.8.1
  requests-toolbelt >= 0.9.1
  tenacity >= 8.0.0
  tqdm >= 4.62.3
  # TODO: Merge with upstream and deploy it
  plotly-calplot@git+https://github.com/Grasia/plotly-calplot.git

[options.package_data]
dao_analyzer = assets/*
cache_scripts = 
  *.json
  */*.json

[options.entry_points]
console_scripts =
  daoa-cache-scripts = cache_scripts.main:main
  daoa-server = dao_analyzer.app:main
