[metadata]
name = dao-analyzer
# version from setuptools_scm (see setup.py)
author = David Davó
author_email = ddavo@ucm.es
description = "A tool to monitor DAO activity"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dao-analyzer.science
project_urls =
  Source = https://github.com/Grasia/dao-analyzer
  Bug Tracker = https://github.com/Grasia/dao-analyzer/issues
  Changelog = https://github.com/Grasia/dao-analyzer/blob/master/CHANGELOG.md
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Environment :: Web Environment
  Framework :: Dash
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering :: Visualization
  Topic :: Sociology
  Typing :: Typed
  Topic :: Utilities

[options]
# packages and package_dir in setup.py
python_requires = >= 3.10
install_requires =
  dash >= 2.5.0
  dash-bootstrap-components >= 1.1.0
  Werkzeug < 2.1.0 # Waiting for upstream fix on dash part
  Flask >= 2.0.2
  Flask-Caching >= 2.0.0
  gql >= 3.0.0a1
  millify >= 0.1.1
  numpy >= 1.17.3
  pandas >= 1.3.4
  portalocker >= 2.3.2
  pyarrow >= 6.0.0
  requests >= 2.26.0
  requests-cache >= 0.8.1
  requests-toolbelt >= 0.9.1
  tenacity >= 8.0.0
  tqdm >= 4.62.3
  plotly-calplot >= 0.1.10
  wrapt >= 1.14

[options.package_data]
dao_analyzer.web = 
  assets/*
dao_analyzer.cache_scripts = 
  *.json
  */*.json
dao_analyzer_components =
  metadata.json
  package-info.json
  dao_analyzer_components.min.js
  dao_analyzer_components.min.js.map
  dao_analyzer_components.css

[options.entry_points]
console_scripts =
  daoa-cache-scripts = dao_analyzer.cache_scripts.main:main
  daoa-server = dao_analyzer.web.app:main

[options.extras_require]
docker =
  gunicorn >= 20.1.0
dev =
  build
  pytest
  hypothesis
  flake8
  pandas-vet
  twine
  dash[dev,testing]
  pytest
  hypothesis
  pandas-vet
  selenium

[flake8]
ignore = 
    E1, # Everything related to indentation
    E2, # Everything related to whitespace
    E3, # Blank lines
    E501, # Line too long
    W1, # Indentation warning
    W2, # Whitespace warning
    W3, # Blank line warning
    W5, # Line break warning
    PD005, # Disabled until they fix false positives
    PD011, # Disabled until they fix false positives
    PD901, # 'df' is a bad variable name. Dont care.
exclude = 
    venv,
    __pycache__,
    .*,
    dist
max-complexity  = 10
max-line-length = 100

[tox:tox]
envlist = py310

[testenv]
deps = .[dev]
wheel_build_env = build
commands = 
  pytest

[testenv:build]

[testenv:lint]
deps = flake8
commands =
  flake8 .

[gh-actions]
python =
  3.8: py38
  3.9: py39
  3.10: py310
